fixed mae and ridge regression

--- a/linear-and-multivariate-regression.ipynb
+++ b/linear-and-multivariate-regression.ipynb
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1283,17 +1283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def l2_norm(m,b):\n",
-    "    return m**2+b**2"
+    "def l2_norm(ridge, m):\n",
+    "    return ridge*m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1301,40 +1301,40 @@
      "output_type": "stream",
      "text": [
       "Cement (component 1)(kg in a m^3 mixture)\n",
-      "Training R-squared: 0.2476\n",
-      "Testing R-squared: 0.25546373898290575\n",
+      "Training R-squared: 0.2455\n",
+      "Testing R-squared: 0.25882514393131517\n",
       "\n",
       "Blast Furnace Slag (component 2)(kg in a m^3 mixture)\n",
-      "Training R-squared: 0.0253\n",
-      "Testing R-squared: -0.005328830009396102\n",
+      "Training R-squared: 0.025\n",
+      "Testing R-squared: -0.008898336241861537\n",
       "\n",
       "Fly Ash (component 3)(kg in a m^3 mixture)\n",
-      "Training R-squared: 0.0236\n",
-      "Testing R-squared: -0.044569180512600726\n",
+      "Training R-squared: 0.0234\n",
+      "Testing R-squared: -0.052122197327018505\n",
       "\n",
       "Water  (component 4)(kg in a m^3 mixture)\n",
-      "Training R-squared: 0.0821\n",
-      "Testing R-squared: 0.10072167827614376\n",
+      "Training R-squared: 0.0813\n",
+      "Testing R-squared: 0.10039466072674208\n",
       "\n",
       "Superplasticizer (component 5)(kg in a m^3 mixture)\n",
-      "Training R-squared: 0.1259\n",
-      "Testing R-squared: 0.1780733937934209\n",
+      "Training R-squared: 0.1246\n",
+      "Testing R-squared: 0.18015923001987466\n",
       "\n",
       "Coarse Aggregate  (component 6)(kg in a m^3 mixture)\n",
-      "Training R-squared: 0.0306\n",
-      "Testing R-squared: 0.0216588108799054\n",
+      "Training R-squared: 0.0304\n",
+      "Testing R-squared: 0.020280356357790907\n",
       "\n",
       "Fine Aggregate (component 7)(kg in a m^3 mixture)\n",
-      "Training R-squared: 0.0263\n",
-      "Testing R-squared: 0.04474985044780966\n",
+      "Training R-squared: 0.026\n",
+      "Testing R-squared: 0.045984918461029256\n",
       "\n",
       "Age (day)\n",
-      "Training R-squared: 0.1114\n",
-      "Testing R-squared: 0.10030144218164316\n",
+      "Training R-squared: 0.1101\n",
+      "Testing R-squared: 0.08940688231716665\n",
       "\n",
       "Concrete compressive strength(MPa, megapascals) \n",
-      "Training R-squared: 0.9998\n",
-      "Testing R-squared: 0.9998477362053071\n",
+      "Training R-squared: 0.9978\n",
+      "Testing R-squared: 0.9978468684399835\n",
       "\n"
      ]
     }
@@ -1344,7 +1344,7 @@
     "max_num_steps = 1000\n",
     "mse_threshold = 0.1\n",
     "alpha = 0.5\n",
-    "ridge = 0.00001\n",
+    "ridge = 0.09\n",
     "m_init = 100\n",
     "b_init = 2\n",
     "\n",
@@ -1365,8 +1365,8 @@
     "        if mse_value < mse_threshold:\n",
     "            break\n",
     "\n",
-    "        m_init = gradient_m(m_init, alpha, feature_values_column, actual_labels_column, predicted_labels_column) + ridge*l2_norm(m_init, b_init)\n",
-    "        b_init = gradient_b(b_init, alpha, actual_labels_column, predicted_labels_column) + ridge*l2_norm(m_init, b_init)\n",
+    "        m_init = gradient_m(m_init, alpha, feature_values_column, actual_labels_column, predicted_labels_column) + l2_norm(ridge, m_init)\n",
+    "        b_init = gradient_b(b_init, alpha, actual_labels_column, predicted_labels_column)\n",
     "        \n",
     "    \n",
     "    # Print the final values of m_init and b_init for the current feature\n",
@@ -1484,14 +1484,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Raw Data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
@@ -1587,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1596,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1681,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1766,27 +1758,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def l2_norm(m_b_init_vector):\n",
-    "    m_b_init_vector = pd.Series(m_b_init_vector)\n",
-    "    return (m_b_init_vector**2).sum()"
+    "def l2_norm(m_b_init_vector, ridge, feature_index):\n",
+    "    return m_b_init_vector[feature_index]*ridge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.2391556791805287, 1.098400570665958, 0.6700489519260062, 0.3594360748650105, 0.29119712218597804, 0.6364176160661202, 0.6204450975942991, 0.5305676116062426, 0.032779677206769504]\n",
-      "Training R-squared: 0.8425780233372892\n",
-      "Testing R-squared: 0.7894955094258154\n"
+      "[1.3390767540412492, 1.1869220825165558, 0.7495074840302476, 0.42188136153867944, 0.3007478018987967, 0.7115986101504366, 0.6951807319381718, 0.5463737294175919, 0.01759516050990044]\n",
+      "Training R-squared: 0.8374851145732495\n",
+      "Testing R-squared: 0.7843927910997917\n"
      ]
     }
    ],
@@ -1796,7 +1787,7 @@
     "mse_threshold = 0.0001\n",
     "alpha = 0.01\n",
     "# Ridge Regression Hyperparameter\n",
-    "ridge = 0.0005\n",
+    "ridge = 0.0001\n",
     "\n",
     "# Set the initial vector of coefficients\n",
     "m_b_init_vector = [1,1,1,1,1,1,1,1,1]\n",
@@ -1810,7 +1801,7 @@
     "for i in range(max_num_steps):\n",
     "    \n",
     "    # Calculate the predicted labels for the training set\n",
-    "    predicted_labels_column = multivariate_prediction_values(m_b_init_vector, train, feature_list) + ridge*l2_norm(m_b_init_vector)\n",
+    "    predicted_labels_column = multivariate_prediction_values(m_b_init_vector, train, feature_list)\n",
     "    \n",
     "    # Get the actual labels for the training set\n",
     "    actual_labels_column = train['Concrete compressive strength(MPa, megapascals) ']\n",
@@ -1826,7 +1817,7 @@
     "\n",
     "    # Update each coefficient using the gradient descent algorithm\n",
     "    for j in range(len(m_b_init_vector)-1):\n",
-    "        m_b_init_vector[j] = gradient_m(m_b_init_vector[j], alpha, train[feature_list[j]], actual_labels_column, predicted_labels_column)\n",
+    "        m_b_init_vector[j] = gradient_m(m_b_init_vector[j], alpha, train[feature_list[j]], actual_labels_column, predicted_labels_column)  + l2_norm(m_b_init_vector, ridge, j)\n",
     "    m_b_init_vector[-1] = gradient_b(m_b_init_vector[-1],alpha, actual_labels_column, predicted_labels_column)\n",
     "\n",
     "print(m_b_init_vector)\n",
